fixing profile on mobile

--- a/wp-content/plugins/business-directory-plugin/core/css/wpbdp.css
+++ b/wp-content/plugins/business-directory-plugin/core/css/wpbdp.css
@@ -336,13 +336,6 @@ form#wpbdmsearchform a.advanced-search-link {
 
 
 
-.flex{
-    display: -ms-flexbox;    
-    display: -webkit-box;    
-    display: -webkit-flexbox; 
-    display: -webkit-flex;
-    display: flex;
-    }
 
 
 .listing-category-label{
